# FreeRTOS-rust-motor-control

./: Cargo.toml  README.md  build.rs
src/: FreeRTOSConfig.h  Run-time-stats-utils.c  hooks.c  main.rs
