[package]
name = "rust-embemded-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freertos-rust = "*"
serialport = "4.1.0"
clap = "3.1.18"
rand = "0.8"

[target.x86_64-pc-windows-gnu.dependencies]


[build-dependencies]
freertos-cargo-build = "*"



